--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"require": {
-		"php": ">=7.2",
+		"php": ">=7.4",
 		"slim/slim": "^3.12.2",
 		"morris/lessql": "^0.4.1",
 		"rubellum/slim-blade-view": "^0.1.1",
@@ -8,14 +8,17 @@
 		"eluceo/ical": "^0.15.1",
 		"erusev/parsedown": "^1.7.3",
 		"gettext/gettext": "^4.6.3",
-		"gumlet/php-image-resize": "^1.9.2"
+		"gumlet/php-image-resize": "^1.9.2",
+		"symfony/dotenv": "^5.0.2",
+		"doctrine/orm": "^2.6.2"
 	},
 	"autoload": {
 		"psr-4": {
-			"Grocy\\Services\\": "services/",
 			"Grocy\\Controllers\\": "controllers/",
+			"Grocy\\Helpers\\": "helpers/",
 			"Grocy\\Middleware\\": "middleware/",
-			"Grocy\\Helpers\\": "helpers/"
+			"Grocy\\Models\\": "models/",
+			"Grocy\\Services\\": "services/"
 		},
 		"files": [
 			"helpers/extensions.php"
