--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "gumlet/php-image-resize": "^1.9.2",
     "doctrine/orm": "^2.6.2",
     "vlucas/phpdotenv": "^4.1",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
