--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 # demo data will be populated during database migrations
 GROCY_MODE=production
 
+# The database connection URL. For examples, see
+# https://www.doctrine-project.org/projects/doctrine-dbal/en/2.10/reference/configuration.html#connecting-using-a-url
+GROCY_DB_URL=sqlite:////db.sqlite
+
 # Either "en" or "de" or the directory name of
 # one of the other available localization folders in the "/localization" directory
 GROCY_CULTURE=en
